[package]
name = "xk"
version = "0.1.0"
authors = ["Paul Biggar <paul.biggar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execution-engine = { version = "*", path = "../execution-engine" }
im = "15.0.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"