[package]
name = "macros"
version = "0.1.0"
authors = ["Paul Biggar <paul.biggar@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro2 = {version = "1.0.19", features = ["nightly"]}
quote = "1.0.7"
syn = {version = "1.0.39", features = ["full", "extra-traits"]}
lazy_static = "1.4.0"
regex = "1.3.9"

[lib]
proc-macro = true
path = "lib.rs"