[package]
name = "execution-engine"
version = "0.1.0"
authors = ["Paul Biggar <paul.biggar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
im-rc = "15.0.0"
itertools = "0.9.0"
ramp = "0.5.9"
macros = { version = "*", path = "../macros"}
serde_json = "1.0"
reqwest = {version = "0.10", features = ["blocking"]}
serde = "1.0"
lazy_static = "1.4"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "eval"
harness = false
